@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.113 2004/01/23 12:06:43 jaco Exp $
+# $Id: CHANGELOG,v 1.114 2004/01/24 09:31:06 jaco Exp $
 
 * Wed, Jan 21, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@obsidian.co.za>:
@@ -86,6 +86,7 @@
       - Allow specification of the network module with the eth{x} option
       - Don't detect network cards when 'nonetwork' is specified
       - Don't detect sound cards when 'nosound' is specified
+      - Add 'xdrv' option to override detected X driver
     [linuxrc]:
       - Allow for finding the cloop image on SCSI devices as well
         by probing with all the SCSI modules
